# hkpug-meetup-ai-explainability-challenge

./: .gitignore  README.md  chatgpt-chat.txt  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  score-submission.yml
challenge/: __init__.py  rubric.py  scorer.py
docs/: glossary.md  hints.md  index.md  interactive-labs.md  opik-for-humans.md  rules.md  scoreboard.md  shap-for-humans.md  working-format.md
docs/assets/: interactive.js  leaderboard.json  scoreboard.js
docs/labs/: index.md  mission-01.md  mission-02.md  mission-03.md  mission-04.md  mission-05.md  mission-06.md  mission-07.md  mission-08.md  mission-09.md  mission-10.md
docs/styles/: challenge.css
examples/ct-alex-au/submissions/AIEX-CT-ALEX-AU/: mission-02.json  mission-04.json  mission-06.json  mission-08.json
labs/: README.md
labs/artifacts/: loan_risk_casebook.json  support_bot_traces.json
submissions/: README.md
submissions/AIEX-CT-ALEX-AU/: mission-01.json  mission-03.json  mission-04.json  mission-05.json  mission-06.json  mission-07.json  mission-08.json  mission-09.json  mission-10.json  profile.json
tests/: test_scorer.py
