[project]
name = "hkpug-ai-explainability-challenge"
version = "0.1.0"
description = "HKPUG tutorial and scoring game for SHAP and Opik."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.4",
  "ruff>=0.14",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
